# library-management-system

./: .cursorrules  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  junit.xml  pyproject.toml  sonar-project.properties
.claude/skills/architecture/: SKILL.md  reference.md
.claude/skills/testing/: SKILL.md
.cursor/rules/: architecture.md  testing.md  testing_strategy.md
.github/workflows/: ci-pipeline.yml
docs/: requirements.md
docs/diagrams/: class-diagram.md  domain-model.md  use-case.md
src/models/: __init__.py  book.py  enums.py  fine.py  loan.py  milestone.py  penalty.py  project.py  queue_request.py  reader.py  reservation.py  student.py  submission.py  team.py
src/services/: __init__.py  events.py  fine_strategies.py  loan_service.py  membership_service.py  milestone_service.py  notification.py  penalty_strategies.py  priority.py  project_service.py  reservation_service.py  return_service.py  team_service.py
src/storage/: __init__.py  interfaces.py
src/storage/memory/: book_repo.py  fine_repo.py  loan_repo.py  milestone_repo.py  penalty_repo.py  project_repo.py  queue_request_repo.py  reader_repo.py  reservation_repo.py  student_repo.py  submission_repo.py  team_repo.py
src/utils/: __init__.py  exceptions.py
tests/integration/: conftest.py  test_borrow_fine_workflow.py  test_membership_blocking_workflow.py  test_membership_workflow.py  test_project_milestone_workflow.py  test_reservation_notification_workflow.py  test_team_queue_workflow.py
tests/unit/models/: test_book.py  test_enums.py  test_fine.py  test_loan.py  test_milestone.py  (+8 more)
(+26 files in other folders)
